[gd_scene load_steps=13 format=3 uid="uid://vymo7le3sf6s"]

[ext_resource type="PackedScene" uid="uid://cu33f1a3hgej8" path="res://Scene/coffee_dongwoo/Desk.tscn" id="1_rrhvc"]
[ext_resource type="Script" uid="uid://s63mjip1pjf7" path="res://Script/CoffeeSc_dongwoo/Coffeemainsc.gd" id="1_y3fsx"]
[ext_resource type="PackedScene" uid="uid://dv0gric11yy58" path="res://Scene/coffee_dongwoo/Cup1.tscn" id="2_ph46f"]
[ext_resource type="PackedScene" uid="uid://c88opv2evv1sd" path="res://Scene/coffee_dongwoo/PrimButton.tscn" id="3_w6l01"]
[ext_resource type="PackedScene" uid="uid://des4efgsrcthc" path="res://Scene/coffee_dongwoo/CoffeeButton.tscn" id="4_8y42p"]
[ext_resource type="PackedScene" uid="uid://bohntvacx4eh6" path="res://Scene/coffee_dongwoo/Cup2.tscn" id="4_hiccx"]
[ext_resource type="PackedScene" uid="uid://ctqe02vwo5ik1" path="res://Scene/coffee_dongwoo/Waterbottle.tscn" id="5_8y42p"]
[ext_resource type="PackedScene" uid="uid://cwchv884oubrl" path="res://Scene/coffee_dongwoo/SugarButton.tscn" id="6_ho1qf"]

[sub_resource type="Animation" id="Animation_vj4o4"]
resource_name = "FadeOut"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeOverlay:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_hiccx"]
resource_name = "FadeOut2"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeOverlay:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_kdjdy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeOverlay:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gt8ag"]
_data = {
&"FadeOut": SubResource("Animation_vj4o4"),
&"FadeOut2": SubResource("Animation_hiccx"),
&"RESET": SubResource("Animation_kdjdy")
}

[node name="CoffeeMainScene" type="Node2D"]
script = ExtResource("1_y3fsx")

[node name="Desk" parent="." instance=ExtResource("1_rrhvc")]
position = Vector2(-250, 399)
scale = Vector2(1.5, 0.4)

[node name="Cup1" parent="." instance=ExtResource("2_ph46f")]
visible = false
position = Vector2(590, 534)
scale = Vector2(1.5, 0.8)

[node name="Cup2" parent="." instance=ExtResource("4_hiccx")]
visible = false
position = Vector2(590, 534)
scale = Vector2(1.5, 0.8)

[node name="PrimButton" parent="." instance=ExtResource("3_w6l01")]
position = Vector2(684, 105)

[node name="SugarButton" parent="." instance=ExtResource("6_ho1qf")]
position = Vector2(187, 435)
scale = Vector2(0.35, 0.35)

[node name="Waterbottle" parent="." instance=ExtResource("5_8y42p")]
z_as_relative = false
position = Vector2(1038, 427)

[node name="CoffeeButton" parent="." instance=ExtResource("4_8y42p")]
position = Vector2(482, 99)

[node name="SceneTransitionTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="FadePlayer" type="AnimationPlayer" parent="."]
process_mode = 3
libraries = {
&"": SubResource("AnimationLibrary_gt8ag")
}
speed_scale = 3.0

[node name="FadeOverlay" type="ColorRect" parent="."]
visible = false
z_index = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 300.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(5, 5)
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0, 0, 0, 0)
metadata/_edit_use_anchors_ = true

[node name="Cup3" parent="." instance=ExtResource("2_ph46f")]
position = Vector2(593, 340)
scale = Vector2(3.5, 3.5)

[node name="Cup4" parent="." instance=ExtResource("4_hiccx")]
visible = false
position = Vector2(593, 340)
scale = Vector2(3.5, 3.5)
